feat: добавил CRUD операции для уровней сложности
